kubernetes/deployment-service-booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbooking-danish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
      - name: booking-service
        image: danish111/booking-service:latest
        ports:
        - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbooking-danish
spec:
  selector:
    app: booking-service
  ports:
    - port: 8003
      targetPort: 8003
