kubernetes/deployment-service-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: onlineeventbooking-danish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      containers:
      - name: frontend-service
        image: danish111/frontend-service:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: onlineeventbooking-danish
spec:
  selector:
    app: frontend-service
  ports:
    - port: 3000
      targetPort: 3000
