kubernetes/deployment-service-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: onlineeventbooking-danish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: danish111/user-service:latest
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: onlineeventbooking-danish
spec:
  selector:
    app: user-service
  ports:
    - port: 8001
      targetPort: 8001
