kubernetes/postgres-booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-booking
  namespace: onlineeventbooking-danish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-booking
  template:
    metadata:
      labels:
        app: postgres-booking
    spec:
      containers:
      - name: postgres-booking
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-booking-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-booking
  namespace: onlineeventbooking-danish
spec:
  selector:
    app: postgres-booking
  ports:
    - port: 5432
      targetPort: 5432
