kubernetes/postgres-user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
  namespace: onlineeventbooking-danish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
      - name: postgres-user
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: postgres-user-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: onlineeventbooking-danish
spec:
  selector:
    app: postgres-user
  ports:
    - port: 5432
      targetPort: 5432
